# resemiclip

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  version_script.lds
.github/workflows/: build.yml
cssdk/engine/: maintypes.h  rehlds_api.h
cssdk/public/: interface.cpp  interface.h
cssdk/public/tier0/: dbg.h
include/: config.h  engine_rehlds_api.h  game_data.h  gamedll_api.h  main.h  player.h  precompiled.h
msvc/: PreBuild.bat  resemiclip.def  resemiclip.sln  resemiclip.vcxproj  resemiclip.vcxproj.filters
src/: config.cpp  engine_rehlds_api.cpp  gamedll_api.cpp  h_export.cpp  main.cpp  meta_api.cpp
version/: appversion.sh  version.h
